--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,23 @@
   </head>
 
   <body>
+    <header>
+      <div class="header-logo">
+        <%= link_to("TweetApp", "/")%>
+      </div>
+      <ul class="header-menus">
+        <li>
+          <%= link_to("TweetAppとは", "/about")%>
+        </li>
+        <li>
+          <%= link_to("投稿一覧", "/posts")%>
+        </li>
+        <li>
+          <%= link_to("新規投稿", "/posts/new")%>
+        </li>
+      </ul>
+    </header>
+
     <%= yield %>
   </body>
 </html>
