create user functions

--- a/app/views/posts/post_detail.html.erb
+++ b/app/views/posts/post_detail.html.erb
@@ -5,8 +5,11 @@
         <%= @post.content %>
       </p>
       <div class="post-time">
-        <!-- @postのcreated_atカラムのデータを表示してください -->
         <%= @post.created_at %>
+      </div>
+      <div class="post-menus">
+        <%= link_to("編集", "/posts/#{@post.id}/edit") %>
+        <%= link_to("削除", "/posts/#{@post.id}/destroy", {method: "post"}) %>
       </div>
     </div>
   </div>
