--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,21 +15,36 @@
         <%= link_to("TweetApp", "/")%>
       </div>
       <ul class="header-menus">
-        <li>
-          <%= link_to("TweetAppとは", "/about")%>
-        </li>
-        <li>
-          <%= link_to("投稿一覧", "/posts")%>
-        </li>
-        <li>
-          <%= link_to("新規投稿", "/posts/new")%>
-        </li>
-        <li>
-          <%= link_to("ユーザー一覧", "/users") %>
-        </li>
-        <li>
-          <%= link_to("新規登録", "/signup") %>
-        </li>
+        <% if @current_user %>
+          <li>
+            <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+          </li>
+          <!-- ログインしている状態でヘッダーに表示するHTMLを貼り付けてください -->
+          <li>
+            <%= link_to("投稿一覧", "/posts/index") %>
+          </li>
+          <li>
+            <%= link_to("新規投稿", "/posts/new") %>
+          </li>
+          <li>
+            <%= link_to("ユーザー一覧", "/users/index") %>
+          </li>
+          <li>
+            <!-- ログアウト用のリンクを追加してください -->
+            <%= link_to("ログアウト", "/logout", {method: :post}) %>
+          </li>
+        <% else %>
+          <!-- ログインしていない状態でヘッダーに表示するHTMLを貼り付けてください -->
+          <li>
+            <%= link_to("TweetAppとは", "/about") %>
+          </li>
+          <li>
+            <%= link_to("新規登録", "/signup") %>
+          </li>
+          <li>
+            <%= link_to("ログイン", "/login") %>
+          </li>
+        <% end %>
       </ul>
     </header>
 
