--- a/app/views/users/user_edit.html.erb
+++ b/app/views/users/user_edit.html.erb
@@ -9,7 +9,10 @@
           </div>
         <% end %>
 
-        <%= form_tag("/users/#{params[:id]}/update") do %>
+        <!-- 画像のアップロードフォームには、multipart: trueを使用 -->
+        <%= form_tag("/users/#{params[:id]}/update", {multipart: true}) do %>
+          <p>プロフ画像</p>
+          <input type="file" name="image">
           <p>ユーザー名</p>
           <input name="name" value="<%= @user.name %>">
           <p>メールアドレス</p>
